# shanhaijing

./: .gitignore  LICENSE  README.md  README_CN.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-04-05-dream.md
docs/superpowers/specs/: 2026-04-05-dream-design.md
examples/: .wiki_state.json
examples/raw/: 2405.15793v3.md  README.md  experience-debugging-cuda-oom.md  paper-attention-is-all-you-need.md  paper-scaling-laws.md
examples/wiki/: _index.md
examples/wiki/concepts/: aci-design-principles.md  agent-computer-interface.md  incremental-compile.md  llm-compiled-wiki.md  lm-agent.md  personal-knowledge-base.md  react-framework.md  scaling-laws.md  self-attention.md  software-engineering-automation.md  swe-bench.md  transformer.md  wikilinks.md
examples/wiki/summaries/: 2405.15793v3.md  README.md  experience-debugging-cuda-oom.md  paper-attention-is-all-you-need.md  paper-scaling-laws.md
shanhaijing/: compile.py  config.py  distill.py  dream.py  init_cmd.py  lint.py  llm.py  query.py  state.py  sync.py
skill/: SKILL.md
skill/references/: article-templates.md  compile-workflow.md  ingest-workflow.md  wiki-state-schema.md
skill/scripts/: pdf_to_md.py  requirements.txt  web_clip.py
tests/: test_dream.py
web/: graph.html  index.html  query_engine.py  server.py
