[project]
name = "shanhaijing"
version = "0.1.0"
description = "LLM-compiled personal knowledge base"
requires-python = ">=3.11"
dependencies = [
    "trafilatura",
    "pymupdf4llm",
    "anthropic>=0.89.0",
    "openai>=2.30.0",
    "notion-client>=3.0.0",
    "pyzotero>=1.11.0",
]

[project.scripts]
shj = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
